# TerminalTrains

./: CMakeLists.txt  README.md
include/: curses_utils.h  types.h
include/game/: colors.h  curses_menus.h  drawable.h  game.h  game_menus.h  game_objects.h  menus.h
src/: main.cpp
src/game/: colors.cpp  game.cpp
src/game/game_objects/: city.cpp  line.cpp  map.cpp  menus.cpp  track.cpp  train.cpp  wagon.cpp
